# gg

./: .gitignore  configure.ac
examples/: Makefile.am
examples/delay/: Makefile.am  create-thunk.sh  delay.cc
examples/workload/: Makefile.am  create-thunk.sh
src/execution/: Makefile.am  engine.hh  engine_baseline.cc  engine_baseline.hh  engine_gg.cc  engine_gg.hh  engine_local.cc  engine_simpledb.cc  engine_simpledb.hh  loop.cc  loop.hh  reductor.cc  response.cc  response.hh  scheduler.cc  scheduler.hh  tracker.cc  tracker.hh
src/frontend/: .gitignore  Makefile.am  cpplambda.cpp  cpplambda.h  gg-create-thunk.cc  gg-execute-server.cc  gg-execute-simpledb.cc  gg-execute.cc  gg-force-interactive.cc  gg-force-remote.cc  gg-force.cc  gg-object-server.cc  gg-scheduler.cc  gg-thunksummary.cc
src/models/: generate-toolchain-header.py
src/net/: Makefile.am  exec_response_parser.cc  exec_response_parser.hh  gg_objectstore.cc  gg_objectstore.hh  protobuf_stream_parser.cc  protobuf_stream_parser.hh  simpledb.cc  simpledb.hh
src/protobufs/: Makefile.am  execformats.proto  netformats.proto  thunk.proto
src/storage/: Makefile.am  backend.cc  backend_gg.cc  backend_gg.hh  backend_simpledb.cc  backend_simpledb.hh
src/thunk/: graph.hh  thunk.cc  thunk.hh
src/util/: Makefile.am  child_process.cc  crc16.cc  crc16.hh  lru.cc  lru.hh  poller.cc  timelog.cc
